Atualizado o status de sucesso da criação de gênero e adicionado a documentação desse código
