# src/server.ts
@@ -127,6 +127,33 @@ app.get("/movies/:genreName", async (req, res) => {
     }
 });
 
+app.post("/genres", async (req, res) => {
+    const { name } = req.body;
+
+    if(!name) {
+        return res.status(400).send({ message: "O nome do gênero é obrigatório" });
+    }
+
+    try {
+        const genre = await prisma.genre.findFirst({
+            where: { name: { equals: name, mode: "insensitive" } }
+        });
+
+        if(genre){
+            return res.status(409).send({ message: "Esse gênero ja existe" });
+        }
+
+        const newGenre = await prisma.genre.create({
+            data: { name }
+        });
+
+        res.status(201).json(newGenre);
+
+    } catch (error) {
+        return res.status(500).send({ message: "Falha ao adicionar o registro do gênero" });
+    }
+});
+
 app.put("/genres/:id", async (req, res) => {
     const id = Number(req.params.id);
     const { name } = req.body;
@@ -168,35 +195,6 @@ app.put("/genres/:id", async (req, res) => {
     }
 
 });
-
-app.post("/genres", async (req, res) => {
-    const { name } = req.body;
-
-    if(!name) {
-        return res.status(400).send({ message: "O nome do gênero é obrigatório" });
-    }
-
-    try {
-        const genre = await prisma.genre.findFirst({
-            where: { name: { equals: name, mode: "insensitive" } }
-        });
-
-        if(genre){
-            return res.status(409).send({ message: "Esse gênero ja existe" });
-        }
-
-        await prisma.genre.create({
-            data: { name }
-        });
-
-        res.status(200).send({ message: "Gênero adicionado com sucesso" });
-
-    } catch (error) {
-        return res.status(500).send({ message: "Falha ao adicionar o registro do gênero" });
-    }
-});
-
-
 
 app.listen(port, () => {
     console.log(`Servidor em execução na porta ${port}: http://localhost:${port}`);
