# swagger.json
@@ -133,6 +133,47 @@
                 }
             }
         },
+        "/genres": {
+            "post": {
+                "tags": ["Genre"],
+                "summary": "Adicionar novo gênero",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "description": "ID do gênero a ser atualizado",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/GenreInput"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Gênero criado com sucesso"
+                    },
+                    "400": {
+                        "description": "O nome do gênero é obrigatório"
+                    },
+                    "409": {
+                        "description": "Esse nome de gênero ja existe"
+                    },
+                    "500": {
+                        "description": "Falha ao adicionar o registro do gênero"
+                    }
+                }
+            }
+        },
         "/genres/{id}": {
             "put": {
                 "tags": [
@@ -265,6 +306,18 @@
                         "type": "string",
                         "format": "date",
                         "description": "Data de lançamento do filme"
+                    }
+                }
+            },
+            "Genres": {
+                "type": "object",
+                "required": [
+                    "name"
+                ],
+                "properties": {
+                    "name": {
+                        "type": "string",
+                        "description": "Nome do gênero"
                     }
                 }
             },
